src/objects/Activity_Load__c.object
<CustomObject>
    <description>Temporary object only used to load activities</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activity Load</relationshipLabel>
        <relationshipName>R00N20000001OoqREAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <label>Subscriber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Activity Load</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Activity Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Load</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>